@@ -15,6 +15,7 @@ version <next>:
 - QDMC audio decoder
 - NewTek SpeedHQ decoder
 - MIDI Sample Dump Standard demuxer
+- readeia608 filter
 
 version 3.2:
 - libopenmpt demuxer
